[package]
name = "compo"
description.workspace = true
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[workspace.package]
description = """
Compo is a general-purpose declarative and reactive component framework designed for single-threaded asynchronous execution, offering high performance and safety guarantees.
Suitable for GUI scenarios or other similar non-GUI component systems.
"""
version = "0.1.1"
edition = "2024"
repository = "https://github.com/mzdk100/compo.git"
license = "Apache-2.0"
authors = ["SmileSky <mzdk100@qq.com>"]
keywords = ["component", "reactive", "declarative", "async", "framework"]
categories = ["asynchronous", "gui", "rust-patterns"]
readme = "README.md"

[workspace]
members = ["macros"]
resolver = "3"

[dependencies]
compo-macros = { version = "0.1", path = "macros" }
futures-util = "0.3.31"

[dev-dependencies]
anyhow = "1.0.99"
tokio = {version = "1.47.1", features = ["macros", "rt"]}
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }